--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Servicios de Discord</title>
+  <title>Serdán</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>Servicios Exclusivos de Discord</h1>
-      <p>Obtén acceso a roles VIP y servicios personalizados</p>
-      <a class="btn" href="https://discord.gg/TUINVITACION" target="_blank">Unirse al Discord</a>
+      <h1>Servicios de pago</h1>
+      <p>Obtén acceso a funciones premium y creación de bots raid personalizados</p>
+      <a class="btn" href="https://discord.gg/2Xrmq3kCW6" target="_blank">Unirse al Discord</a>
     </div>
   </header>
 
@@ -20,29 +20,29 @@
     <section class="services container">
       <h2>Nuestros Servicios</h2>
       <div class="service-card">
-        <h3>Servicio 1</h3>
-        <p>Descripción breve del servicio 1.</p>
-        <p class="price">$5</p>
-        <a class="btn-pay" href="https://www.paypal.com/paypalme/TUCORREO" target="_blank">Pagar</a>
+        <h3>Premium BOT RAID con admin y sin admin</h3>
+        <p>Desbloquea las funciones de personalización completas de los BOTS de Serdán</p>
+        <p class="price">5 € / 6,5 $</p>
+        <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">Pagar</a>
       </div>
       <div class="service-card">
-        <h3>Servicio 2</h3>
-        <p>Descripción breve del servicio 2.</p>
-        <p class="price">$10</p>
-        <a class="btn-pay" href="https://www.paypal.com/paypalme/TUCORREO" target="_blank">Pagar</a>
+        <h3>BOT RAID personalizado con admin</h3>
+        <p>• Nombre y foto de perfil del RBOT personalizadas al gusto del usuario.<br>• Rapidez: Al ser un BOT privado, tendrás un x10 de rapidez en todos los comandos, porque solo lo usas tu.<br>• Nombres de comandos personalizados: Los comandos de raid serán totalmente personalizados al gusto del usuario.<br>• Te enseño en llamada cómo mantenerlo online gratis 24/7 (no hace falta que hables, solamente puedes ver mi retransmisión)</p>
+        <p class="price">8 € / 10 $</p>
+        <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">Pagar</a>
       </div>
       <div class="service-card">
-        <h3>Servicio 3</h3>
-        <p>Descripción breve del servicio 3.</p>
+        <h3>BOT RAID personalizado sin admin</h3>
+        <p>• Nombre y foto de perfil del RBOT personalizadas al gusto del usuario.<br>• Rapidez: Al ser un BOT privado, tendrás un x10 de rapidez en todos los comandos, porque solo lo usas tu.<br>• Nombres de comandos personalizados: Los comandos de raid serán totalmente personalizados al gusto del usuario.<br>• Te enseño en llamada cómo mantenerlo online gratis 24/7 (no hace falta que hables, solamente puedes ver mi retransmisión)</p>
         <p class="price">$15</p>
-        <a class="btn-pay" href="https://www.paypal.com/paypalme/TUCORREO" target="_blank">Pagar</a>
+        <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">Pagar</a>
       </div>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <p>© 2025 Servicios de Discord | Contacto: <a href="mailto:TUEMAIL@correo.com">TUEMAIL@correo.com</a></p>
+      <p>Serdán | Siente el poder del sexo</a></p>
     </div>
   </footer>
 </body>
