--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Serdán</title>
 
+  <!-- favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
+
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +16,10 @@
 <body>
   <header class="hero">
     <div class="hero-overlay"></div>
+
+    <!-- imagen en la esquina superior derecha -->
+    <img src="BACKGROUND.png" class="hero-corner-img">
+
     <div class="container hero-content">
       <h1>Servicios de pago</h1>
       <p>Acceso a funciones premium y creación de bots raid personalizados</p>
