--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Serdán</title>
 
-  <!-- favicon -->
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
   <link rel="stylesheet" href="style.css">
@@ -14,12 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <header class="hero">
-    <div class="hero-overlay"></div>
-
-    <!-- imagen en la esquina superior derecha -->
-    <img src="BACKGROUND.png" class="hero-corner-img">
-
     <div class="container hero-content">
       <h1>Servicios de pago</h1>
       <p>Acceso a funciones premium y creación de bots raid personalizados</p>
@@ -70,5 +66,6 @@
       <p>Serdán | Siente el poder del sexo</p>
     </div>
   </footer>
+
 </body>
 </html>
