--- a/index.html
+++ b/index.html
@@ -26,49 +26,58 @@
   </div>
 </header>
 
-  <main>
-    <section class="services container">
-      <h2>Nuestros Servicios</h2>
+<main>
+  <section class="services container">
+    <h2>Nuestros Servicios</h2>
 
-      <div class="service-card">
-        <h3>Premium BOT RAID con admin y sin admin</h3>
-        <p>Desbloquea las funciones de personalización completas de los BOTS de Serdán</p>
-        <p class="price">5 € / 6,5 $</p>
-        <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">PayPal</a>
+    <div class="service-card">
+      <h3>Premium BOT RAID con admin y sin admin</h3>
+      <p>Desbloquea las funciones de personalización completas de los BOTS de Serdán</p>
+      <p class="price">5 € / 6,5 $</p>
+      <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">PayPal</a>
+      <div class="service-note">
+        Después del pago, abrir un ticket de soporte en el Discord Oficial para recibir el producto.
       </div>
-
-      <div class="service-card">
-        <h3>BOT RAID personalizado con admin</h3>
-        <p>
-          • Nombre y foto del BOT totalmente personalizados.<br>
-          • Rapidez x10 en todos los comandos.<br>
-          • Comandos de raid completamente a tu gusto.<br>
-          • Te enseño a mantenerlo online gratis 24/7.
-        </p>
-        <p class="price">8 € / 10 $</p>
-        <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">PayPal</a>
-      </div>
-
-      <div class="service-card">
-        <h3>BOT RAID personalizado sin admin</h3>
-        <p>
-          • Nombre y foto del BOT personalizados.<br>
-          • Rapidez x10 en todos los comandos.<br>
-          • Comandos a gusto del usuario.<br>
-          • Te enseño a mantenerlo online gratis 24/7.
-        </p>
-        <p class="price">10 € / 12 $</p>
-        <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">PayPal</a>
-      </div>
-
-    </section>
-  </main>
-
-  <footer>
-    <div class="container">
-      <p>Serdán | Siente el poder del sexo</p>
     </div>
-  </footer>
+
+    <div class="service-card">
+      <h3>BOT RAID personalizado con admin</h3>
+      <p>
+        • Nombre y foto del BOT totalmente personalizados.<br>
+        • Rapidez x10 en todos los comandos.<br>
+        • Comandos de raid completamente a tu gusto.<br>
+        • Te enseño a mantenerlo online gratis 24/7.
+      </p>
+      <p class="price">8 € / 10 $</p>
+      <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">PayPal</a>
+      <div class="service-note">
+        Después del pago, abrir un ticket de soporte en el Discord Oficial para recibir el producto.
+      </div>
+    </div>
+
+    <div class="service-card">
+      <h3>BOT RAID personalizado sin admin</h3>
+      <p>
+        • Nombre y foto del BOT personalizados.<br>
+        • Rapidez x10 en todos los comandos.<br>
+        • Comandos a gusto del usuario.<br>
+        • Te enseño a mantenerlo online gratis 24/7.
+      </p>
+      <p class="price">10 € / 12 $</p>
+      <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">PayPal</a>
+      <div class="service-note">
+        Después del pago, abrir un ticket de soporte en el Discord Oficial para recibir el producto.
+      </div>
+    </div>
+
+  </section>
+</main>
+
+<footer>
+  <div class="container">
+    <p>Serdán | Siente el poder del sexo</p>
+  </div>
+</footer>
 
 </body>
 </html>
