--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="hero-content">
     <img src="favicon.png" class="hero-logo" alt="Serdán">
     <h1>Discord de Serdán</h1>
-    <p>Entra para acceder a los BOTS RAID más rápidos y potentes</p>
+    <p>Entra para acceder a los BOTS RAID más rápidos y estables de Discord</p>
     <a class="btn-discord" href="https://discord.gg/2Xrmq3kCW6" target="_blank">Unirme al Discord</a>
   </div>
 </header>
@@ -31,8 +31,8 @@
     <h2>Nuestros Servicios</h2>
 
     <div class="service-card">
-      <h3>Premium BOT RAID con admin y sin admin</h3>
-      <p>Desbloquea las funciones de personalización completas de los BOTS de Serdán</p>
+      <h3>BOT RAID Premium con admin y sin admin</h3>
+      <p>Desbloquea las funciones de personalización completas de los BOTS RAID de Serdán</p>
       <p class="price">5 € / 6,5 $</p>
       <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">PayPal</a>
       <div class="service-note">
@@ -44,9 +44,10 @@
       <h3>BOT RAID personalizado con admin</h3>
       <p>
         • Nombre y foto del BOT totalmente personalizados.<br>
-        • Rapidez x10 en todos los comandos.<br>
-        • Comandos de raid completamente a tu gusto.<br>
-        • Te enseño a mantenerlo online gratis 24/7.
+        • Rapidez x10 en el raid.<br>
+        • Tú manejas el BOT, cuando se enciende y cuándo se apaga.<br>
+        • Te enseño a mantenerlo online gratis 24/7.<br>
+        • Es permanente.
       </p>
       <p class="price">8 € / 10 $</p>
       <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">PayPal</a>
@@ -59,9 +60,9 @@
       <h3>BOT RAID personalizado sin admin</h3>
       <p>
         • Nombre y foto del BOT personalizados.<br>
-        • Rapidez x10 en todos los comandos.<br>
-        • Comandos a gusto del usuario.<br>
-        • Te enseño a mantenerlo online gratis 24/7.
+        • Rapidez x10.<br>
+        • 5 mensajes cada pulsación del botón (A diferencia de los 3 que tiene el gratis).<br>
+        • Te lo mantengo online 24/7.
       </p>
       <p class="price">10 € / 12 $</p>
       <a class="btn-pay" href="https://paypal.me/SerdanVentas" target="_blank">PayPal</a>
