--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Open Graph / Social Media Preview -->
+  <meta property="og:title" content="Tienda Serdán">
+  <meta property="og:description" content="Entra para acceder a los BOTS RAID más rápidos y potentes">
+  <meta property="og:image" content="https://www.serdan.shop/favicon.png">
+  <meta property="og:url" content="https://www.serdan.shop">
+  <meta property="og:type" content="website">
 </head>
 <body>
 
